STARCH-972 JSON generic type handling fixes